// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar test suites > render normally when body has class horizontal 1`] = `
<DocumentFragment>
  <body
    class="horizontal"
  >
    <div
      class="main-content"
    >
      Hello
    </div>
    <div
      class="sticky"
    >
      <aside
        class="app-sidebar "
      >
        <div
          class="scrollbar-container hor-scroll ps"
        >
          <div
            class="main-sidebar-header active"
          >
            <a
              class="header-logo active"
              href="/dashboard/dashboard1/"
            >
              <img
                alt="logo"
                class="main-logo  desktop-logo"
                src="/src/assets/img/brand/logo.png"
              />
              <img
                alt="logo"
                class="main-logo  desktop-dark"
                src="/src/assets/img/brand/logo-white.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-logo"
                src="/src/assets/img/brand/favicon.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-dark"
                src="/src/assets/img/brand/favicon-white.png"
              />
            </a>
          </div>
          <div
            class="main-sidemenu"
          >
            <div
              class="slide-left disabled"
              id="slide-left"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                />
              </svg>
            </div>
            <ul
              class="side-menu"
            >
              <li
                class="side-item side-item-category"
              />
              <li
                class="slide   "
              >
                <a
                  class="side-menu__item "
                  href="javascript"
                >
                  <svg
                    fill="#000000"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 13h1v7c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-7h1a1 1 0 0 0 .707-1.707l-9-9a.999.999 0 0 0-1.414 0l-9 9A1 1 0 0 0 3 13zm7 7v-5h4v5h-4zm2-15.586 6 6V15l.001 5H16v-5c0-1.103-.897-2-2-2h-4c-1.103 0-2 .897-2 2v5H6v-9.586l6-6z"
                    />
                  </svg>
                  <span
                    class="side-menu__label"
                  >
                    Dashboards
                  </span>
                  <i
                    class="angle fe fe-chevron-right"
                  />
                </a>
                <ul
                  class="slide-menu "
                  style="display: none;"
                />
              </li>
              <li
                class="sub-slide  "
              >
                <span>
                  <a
                    class="slide-item"
                    href="/dashboard/dashboard1/"
                  >
                    Dashboard-1
                  </a>
                </span>
              </li>
            </ul>
            <li
              class="side-item side-item-category"
            />
            <li
              class="slide   "
            >
              <a
                class="side-menu__item "
                href="javascript"
              >
                <svg
                  class="side-menu__icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"
                  />
                </svg>
                <span
                  class="side-menu__label"
                >
                  Menu-levels
                </span>
                <i
                  class="angle fe fe-chevron-right"
                />
              </a>
              <ul
                class="slide-menu "
                style="display: none;"
              />
            </li>
            <li
              class="sub-slide  "
            >
              <span>
                <a
                  aria-current="page"
                  class="slide-item active"
                  href="/#/"
                >
                  Level-1
                </a>
              </span>
            </li>
            <li
              class="sub-slide  "
            >
              <a
                class="slide-item "
                href="javascript"
              >
                <span
                  class="sub-side-menu__label"
                >
                  Level-2
                </span>
                <i
                  class="sub-angle fe fe-chevron-right"
                />
              </a>
              <ul
                class="sub-slide-menu "
                style="display: none;"
              />
            </li>
            <li>
              <a
                aria-current="page"
                class="sub-side-menu__item active"
                href="/#/"
              >
                <span
                  class="sub-side-menu__label"
                >
                  Level-2.1
                </span>
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="sub-side-menu__item active"
                href="/#/"
              >
                <span
                  class="sub-side-menu__label"
                >
                  Level-2.2
                </span>
              </a>
            </li>
            <div
              class="slide-right"
              id="slide-right"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                />
              </svg>
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </aside>
    </div>
  </body>
</DocumentFragment>
`;

exports[`Sidebar test suites > render normally when body has not class horizontal 1`] = `
<DocumentFragment>
  <body>
    <div
      class="main-content"
    >
      Hello
    </div>
    <div
      class="sticky"
    >
      <aside
        class="app-sidebar "
      >
        <div
          class="scrollbar-container hor-scroll ps"
        >
          <div
            class="main-sidebar-header active"
          >
            <a
              class="header-logo active"
              href="/dashboard/dashboard1/"
            >
              <img
                alt="logo"
                class="main-logo  desktop-logo"
                src="/src/assets/img/brand/logo.png"
              />
              <img
                alt="logo"
                class="main-logo  desktop-dark"
                src="/src/assets/img/brand/logo-white.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-logo"
                src="/src/assets/img/brand/favicon.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-dark"
                src="/src/assets/img/brand/favicon-white.png"
              />
            </a>
          </div>
          <div
            class="main-sidemenu"
          >
            <div
              class="slide-left disabled"
              id="slide-left"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                />
              </svg>
            </div>
            <ul
              class="side-menu"
            >
              <li
                class="side-item side-item-category"
              />
              <li
                class="slide   "
              >
                <a
                  class="side-menu__item "
                  href="javascript"
                >
                  <svg
                    fill="#000000"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 13h1v7c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-7h1a1 1 0 0 0 .707-1.707l-9-9a.999.999 0 0 0-1.414 0l-9 9A1 1 0 0 0 3 13zm7 7v-5h4v5h-4zm2-15.586 6 6V15l.001 5H16v-5c0-1.103-.897-2-2-2h-4c-1.103 0-2 .897-2 2v5H6v-9.586l6-6z"
                    />
                  </svg>
                  <span
                    class="side-menu__label"
                  >
                    Dashboards
                  </span>
                  <i
                    class="angle fe fe-chevron-right"
                  />
                </a>
                <ul
                  class="slide-menu "
                  style="display: none;"
                />
              </li>
              <li
                class="sub-slide  "
              >
                <span>
                  <a
                    class="slide-item"
                    href="/dashboard/dashboard1/"
                  >
                    Dashboard-1
                  </a>
                </span>
              </li>
            </ul>
            <li
              class="side-item side-item-category"
            />
            <li
              class="slide   "
            >
              <a
                class="side-menu__item "
                href="javascript"
              >
                <svg
                  class="side-menu__icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"
                  />
                </svg>
                <span
                  class="side-menu__label"
                >
                  Menu-levels
                </span>
                <i
                  class="angle fe fe-chevron-right"
                />
              </a>
              <ul
                class="slide-menu "
                style="display: none;"
              />
            </li>
            <li
              class="sub-slide  "
            >
              <span>
                <a
                  aria-current="page"
                  class="slide-item active"
                  href="/#/"
                >
                  Level-1
                </a>
              </span>
            </li>
            <li
              class="sub-slide  "
            >
              <a
                class="slide-item "
                href="javascript"
              >
                <span
                  class="sub-side-menu__label"
                >
                  Level-2
                </span>
                <i
                  class="sub-angle fe fe-chevron-right"
                />
              </a>
              <ul
                class="sub-slide-menu "
                style="display: none;"
              />
            </li>
            <li>
              <a
                aria-current="page"
                class="sub-side-menu__item active"
                href="/#/"
              >
                <span
                  class="sub-side-menu__label"
                >
                  Level-2.1
                </span>
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="sub-side-menu__item active"
                href="/#/"
              >
                <span
                  class="sub-side-menu__label"
                >
                  Level-2.2
                </span>
              </a>
            </li>
            <div
              class="slide-right"
              id="slide-right"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                />
              </svg>
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </aside>
    </div>
  </body>
</DocumentFragment>
`;
